--- a/about.html
+++ b/about.html
@@ -101,7 +101,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -266,13 +267,14 @@
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 about_sec1_col2 animate fadeLeft">
                 <div class="about_sec1_col2_txt">
                     <h2>Secure courier for small & big packages</h2>
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai, offers exclusive services with astounding quality for our clients. We specialise in
-                        the complete range of logistics services that support timely and accurate fulfilment of deals.
-                        Our agenda is to develop smoothness in your international business.</p>
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing, and shipping
+                        companies in Dubai, offers exclusive services with astounding quality for our clients. We
+                        specialize in the complete range of logistics services that support timely and accurate
+                        fulfillment of deals. Our agenda is to develop smoothness in your international business.</p>
                     <p>At INC Express, distances don't matter as we carry out the best practices that proffer diligent
-                        results. From customs clearance to cross-border trades, we are one-stop shipping company for all
-                        your transportation requirements.</p>
+                        results. From customs clearance to cross-border trades, we are your one-stop shipping company
+                        for all your transportation requirements. INC Express Shipping LLC: Your Partner for Shipping
+                        Services in Dubai.</p>
                 </div>
             </div>
         </div>
@@ -329,9 +331,9 @@
                         WHAT WE DO
                     </h4>
                     <p>
-                        Situated in the Dubai Airport Free Zone area, INC Express is a potential freight, logistics and
-                        shipping company that holds a substantial stake in the transportation, warehousing and
-                        management company.
+                        Situated in the Dubai Airport Free Zone area, INC Express is a potential freight, logistics, and
+                        shipping company that holds a substantial stake in the transportation, warehousing, and
+                        management company, providing comprehensive Shipping Services in Dubai.
                     </p>
                 </div>
             </div>
@@ -352,8 +354,8 @@
                         OUR MISSION
                     </h4>
                     <p>
-                        We aim at becoming one of the leading freight forwardings with exceptional International
-                        shipping services with top-notch quality.
+                        We visualise ourselves as one of the exclusive Shipping Services in Dubai that supports quality,
+                        trust and passions towards our business.
                     </p>
                 </div>
             </div>
@@ -402,8 +404,9 @@
                 <div class="why_us_card_wrap">
                     <div class="why_us_card">
                         <h2>A to Z Services</h2>
-                        <p>Our logistics and international shipping services are flexible and customizable; therefore
-                            all shipment requirements and needs can be ruminated over and attained with ease.</p>
+                        <p>Shipping Services in Dubai: Our logistics and international shipping services are flexible
+                            and customizable; therefore all shipment requirements and needs can be ruminated over and
+                            attained with ease.</p>
                     </div>
                 </div>
             </div>
@@ -411,8 +414,8 @@
                 <div class="why_us_card_wrap">
                     <div class="why_us_card">
                         <h2>Unmatched Quality</h2>
-                        <p>Being one of the best shipping company in UAE, our warehousing and logistics services tend
-                            toprovide for unparalleled freight solutions.</p>
+                        <p>Being one of the best Shipping Services in Dubai, our warehousing and logistics services tend
+                            to provide for unparalleled freight solutions.</p>
                     </div>
                 </div>
             </div>
@@ -540,9 +543,10 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing, and Shipping
+                        Services in Dubai.</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -605,7 +609,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
