--- a/air-freight.html
+++ b/air-freight.html
@@ -39,7 +39,7 @@
     <!-- Primary Meta Tags -->
     <title>Air Freight Forwarding Company in Dubai | International Freight Shipping</title>
     <meta name="description"
-        content="Leading Air Freight Forwarding Company in Dubai offering International Freight Shipping Services. Reliable, efficient Logistics solutions tailored to your needs."/>
+        content="Leading Air Freight Forwarding Company in Dubai offering International Freight Shipping Services. Reliable, efficient Logistics solutions tailored to your needs." />
     <meta name="keywords"
         content="Air Freight Services Dubai, Air Freight Company in Dubai, Air Cargo Company in Dubai, Air Cargo Services in Dubai, Air Freight Companies in Dubai, Air Freight Services in Dubai, Air Freight Companies Dubai, Air Freight Shipping Services, International Air Freight Service, Air Cargo Logistics in Dubai" />
     <meta name="language" content="english" />
@@ -54,11 +54,11 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Air Freight Company in Dubai | International Freight Shipping"/>
-    <meta property="og:site_name" content="INC Express Shipping L.L.C"/>
-    <meta property="og:url" content="https://incshipping.com/air-freight"/>
+    <meta property="og:title" content="Air Freight Company in Dubai | International Freight Shipping" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/air-freight" />
     <meta property="og:description" content="Leading air freight company in Dubai offering international freight shipping
-        services. Reliable, efficient logistics solutions tailored to your needs."/>
+        services. Reliable, efficient logistics solutions tailored to your needs." />
     <meta property="og:type" content=website>
     <meta property="og:image" content="">
 
@@ -72,12 +72,15 @@
 
 
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KXGHLLB3');</script>
     <!-- End Google Tag Manager -->
 
 
@@ -98,7 +101,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -258,17 +262,19 @@
                 </div>
                 <div class="service_sub_sec1_para">
                     <p>
-                        INC Express is an air freight company in Dubai. Airfreight refers to transporting goods from one
-                        location to another through the medium of air. Airfreight Logistics is one of the most popular
-                        ways of international shipping goods from Dubai. Commercial flights transport the cargo from UAE
-                        to global destinations daily, which makes it a preferred shipping method for customers who want
-                        fast turnaround for the delivery and availability of their products
+                        INC Express is an Air Freight Forwarding Company in Dubai. Airfreight refers to transporting
+                        goods from one location to another through the medium of air. Airfreight Logistics is one of the
+                        most popular ways of international shipping goods from Dubai. International Freight Shipping by
+                        commercial flights transports the cargo from UAE to global destinations daily, which makes it a
+                        preferred shipping method for customers who want fast turnaround for the delivery and
+                        availability of their products.
+
                     </p>
                     <p>
-                        INC Express is a reliable provider of international air cargo services in Dubai which makes it
+                        INC Express is a reliable provider of international air cargo services in Dubai, making it
                         easier for customers to book air freight shipping services according to their cargo
-                        requirements. The agency is also involved in customs clearance, providing insurance for damages
-                        and even managing the inventory.
+                        requirements. The Air Freight Forwarding Company in Dubai also handles customs clearance,
+                        provides insurance for damages, and manages inventory.
                     </p>
                 </div>
             </div>
@@ -328,8 +334,9 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Door To Door Service</h3>
                         <p>
-                            We provide convenient pickup form desired location and well-timed delivery at the
-                            destination with our international air freight services.
+                            We provide convenient pickup from your desired location and well-timed delivery at the
+                            destination with our international air freight services, establishing us as a trusted Air
+                            Freight Forwarding Company in Dubai.
                         </p>
                     </div>
                 </div>
@@ -339,8 +346,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Fast-Paced</h3>
                         <p>
-                            By choosing our air cargo service in Dubai, you ensure quick freight age and shipment of
-                            your goods at the landing place.
+                            By choosing our Air Freight Forwarding Company in Dubai, you ensure quick freight age and
+                            shipment of your goods at the landing place."
                         </p>
                     </div>
                 </div>
@@ -364,8 +371,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Easy Freight Booking</h3>
                         <p>
-                            With our air cargo service in Dubai, you can easily explore and choose from a wide range of
-                            air freight options.
+                            Explore a wide range of air freight options with our Air Freight Forwarding Company in
+                            Dubai"
                         </p>
                     </div>
                 </div>
@@ -429,9 +436,10 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Air Freight
+                        Forwarding Company in Dubai</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -494,7 +502,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
