--- a/channel-partner.html
+++ b/channel-partner.html
@@ -75,12 +75,15 @@
 
 
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KXGHLLB3');</script>
     <!-- End Google Tag Manager -->
 
 
@@ -101,7 +104,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -266,16 +270,17 @@
                         INC Express is the best courier channel partner for faster, more secure, and more reliable
                         delivery services for our customers. Every day, we collect hundreds of parcels and deliver them
                         through transport. From packages to consignments of every size, weight, and shape, we deliver
-                        parcels globally.
-                        We empower businesses that principally work business-to-business and need to keep clients and
-                        partners in the right supply of goods at the right time. We also help consumer-facing businesses
-                        keep their distribution centers and outlets stocked. We even guarantee that their end clients
-                        always receive quality deliveries that go well with the brand values from which they have
-                        purchased.
+                        parcels globally. We empower businesses that principally work business-to-business and need to
+                        keep clients and partners in the right supply of goods at the right time. We also help
+                        consumer-facing businesses keep their distribution centers and outlets stocked. We even
+                        guarantee that their end clients always receive quality deliveries that go well with the brand
+                        values from which they have purchased.
+
                     </p>
                     <p>
                         We even offer overnight secure delivery services of documents and medical supplies, making us
-                        industry pioneers for serving them in emergencies.
+                        industry pioneers for serving them in emergencies. Our Best Courier Channel Partners in Dubai
+                        ensure reliable and efficient delivery solutions across various sectors.
                     </p>
                 </div>
             </div>
@@ -296,12 +301,15 @@
             precisely. From the day when we started working in this industry, we always thought of being helpful,
             attentive to detail, and superior courier service. The name we have earned for ourselves is all through
             meeting the exact demands of our clients.
+
         </p>
         <p>
             No matter what kind of delivery need you have, we can make your delivery needs happen into reality without
             any failure. We always deal with people transparently and using the latest trucks, advanced systems, and
-            communication methods.It is why manufacturers, vendors, and partners choose us to deliver their goods:
-            always get swift, secure, and faster delivery services
+            communication methods. It is why manufacturers, vendors, and partners choose us to deliver their goods:
+            always get swift, secure, and faster delivery services. Our Best Courier Channel Partners in Dubai ensure
+            reliable and precise delivery solutions for every client.
+
         </p>
         <h3>How We Fulfill The Goals Of Businesses Being The Leading Channel Partners?</h3>
         <p>
@@ -520,9 +528,10 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Best Courier
+                        Channel Partners in Dubai.</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -585,7 +594,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
