--- a/contact.html
+++ b/contact.html
@@ -247,9 +247,10 @@
 
 
     <section class="contact_text">
-        <p>We are dedicated to providing you with exceptional logistics solutions and customer service. Whether you have
-            a question about our services, need assistance with a shipment, or want to discuss a customized logistics
-            plan, our team is here to assist you.
+        <p>Welcome to the contact page of INC Express Shipping LLC, the best shipping company in Dubai, UAE. We focus on
+            offering pinnacle-tier logistics solutions that make certain seamless customs clearance, steady shipment
+            transfers, and efficient documentation. Our devoted group of professionals is right here to provide you with
+            personalized guides and tailor-made strategies to satisfy your specific transport needs.
         </p>
     </section>
 
@@ -281,6 +282,32 @@
                     </div>
                 </div>
             </div>
+            <div class="fasion_text_card">
+                <p>
+                    <i class="fa-regular fa-hand-point-right"></i> &nbsp; Whether you have got questions about our
+                    offerings, want help along with your cargo, or need to talk
+                    about a custom-designed logistics answer, we are ready to assist. Our dedication to excellence and
+                    our
+                    worldwide community permits us to supply dependable and efficient transport answers that pressure
+                    your
+                    business boom.
+                </p>
+                <p>
+                    <i class="fa-regular fa-hand-point-right"></i> &nbsp; At INC Express Shipping LLC, we pride
+                    ourselves on our tremendous understanding and unwavering dedication to protection and safety. We
+                    understand the complexities of the shipping industry and paintings diligently to simplify the manner
+                    for our customers, ensuring a problem-free enjoy from start to finish.
+
+                </p>
+                <p>
+                    <i class="fa-regular fa-hand-point-right"></i> &nbsp; Contact us today to examine more about how we
+                    will assist your logistics needs. You can reach us through phone, e-mail, or by means of filling out
+                    the contact form below. Our team is ready to help you and make certain your logistics wishes are met
+                    with the highest standards of provider.
+
+                </p>
+            </div>
+
         </div>
         <div class="row contact_details_bar">
             <div style="padding: 0;" class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12">
@@ -333,8 +360,8 @@
                 <div class="footer_logo_container">
                     <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
                         alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <p>Experience the INC Express Shipping LLC distinction and find out why we are a high-quality
+                        shipping organization in Dubai, UAE.</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
