--- a/corporate-courier.html
+++ b/corporate-courier.html
@@ -103,7 +103,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -289,7 +290,7 @@
             relationships with renowned and leading organizations. Our services can be set up on request and assisted at
             the most significant level with accuracy, reliability, and impressive skill. Our experts can handle every
             aspect of your corporate logistics planning, and you will receive a reasonable pricing plan that meets your
-            service needs.
+            service needs. INC Express is the premier Courier Company in Dubai.
         </p>
         <p>
             We serve businesses across multiple industries. We also have a dedicated team of suppliers who know how to
@@ -306,9 +307,10 @@
         <p>
             To ensure agreement with pharma shipment handling in Dubai, it is essential to meet the requirements of both
             manufacturers and the FDA. For pharma transportation, there are strict requirements to follow the FDA's Code
-            of Federal Regulations.
-            This code provides thorough instructions on the proper handling, temperature control, and documentation of
-            pharmaceutical products. Its role is to maintain high-quality and safe standards for all drugs and vaccines.
+            of Federal Regulations. This code provides thorough instructions on the proper handling, temperature
+            control, and documentation of pharmaceutical products. Its role is to maintain high-quality and safe
+            standards for all drugs and vaccines. Our Courier Company in Dubai adheres to these stringent guidelines to
+            ensure the integrity and safety of pharmaceutical shipments.
         </p>
         <p>
             Additionally, the World Health Organization has established standardized international guidelines for
@@ -319,14 +321,16 @@
         <p>
             To ensure agreement with pharma shipment handling in Dubai, it is essential to meet the requirements of both
             manufacturers and the FDA. For pharma transportation, there are strict requirements to follow the FDA's Code
-            of Federal Regulations.
-            This code provides thorough instructions on the proper handling, temperature control, and documentation of
-            pharmaceutical products. Its role is to maintain high-quality and safe standards for all drugs and vaccines
+            of Federal Regulations. This code provides thorough instructions on the proper handling, temperature
+            control, and documentation of pharmaceutical products. Its role is to maintain high-quality and safe
+            standards for all drugs and vaccines.
+
         </p>
         <p>
             Additionally, the World Health Organization has established standardized international guidelines for
             packing and shipping pharmaceutical products, including vaccines. These procedures cover various aspects,
-            such as insulated packing requirements and the submission of vaccine arrival reports.
+            such as insulated packing requirements and the submission of vaccine arrival reports. Our Courier Company in
+            Dubai adheres to these stringent guidelines to ensure the integrity and safety of pharmaceutical shipments.
         </p>
     </section>
 
@@ -396,13 +400,15 @@
             At INC Express, we take pride in ourselves and our team because of our ability and efficiency to provide
             customized, excellent, and reliable corporate courier and cargo services. We serve the business needs of a
             wide range of industries. Our courier service process is designed to optimize your team's workflow besides
-            delivering an exceptional and out-of-the-world customer experience. With us, you can avail of -
+            delivering an exceptional and out-of-the-world customer experience. With us, you can avail of:
+
         </p>
         <ul>
             <li>Full-service package with real-time updates.</li>
             <li>End-to-end courier solutions for corporates with successful supply chain management.</li>
             <li>Customized pick-up and drop-delivery services for a vast range of industries.</li>
             <li>An extensive group of specialized drivers for the courier services.</li>
+            <li>Our Courier Company in Dubai is committed to meeting your logistics needs with precision and care.</li>
         </ul>
         <h3>End-to-end Delivery Solutions: <br>What You Get When You Partner with INC Express</h3>
         <p>
@@ -410,10 +416,12 @@
             one-stop solution from INC Express. We work with our corporate clients from multiple industries to deliver
             corporate items seamlessly. Our team works 24/7 to deliver corporate items whenever needed to improve and
             keep up the process nonstop for a smooth supply chain.
+
         </p>
         <p>
             We understand that corporate delivery services can succeed only when performed on a reliable and continued
-            basis. That is why we are the fastest-growing and most capable provider of corporate delivery services.
+            basis. That is why we are the fastest-growing and most capable provider of corporate delivery services. Our
+            Courier Company in Dubai is committed to ensuring your business's logistics run smoothly and efficiently..
         </p>
     </section>
 
@@ -432,7 +440,8 @@
                             After discussing your unique business goals, challenges, objectives, and expectations, we
                             start the process. It helps us craft an exclusive solution with the right people, processes,
                             and technology. With our end, you can have a custom proposal based on your company type and
-                            business niche at the most affordable price.
+                            business niche at the most affordable price. Our Courier Company in Dubai is dedicated to
+                            providing personalized solutions that meet your specific requirements.
                         </p>
                     </div>
                 </div>
@@ -444,7 +453,8 @@
                         <p>
                             We select the best tools to optimize courier order management and improve customer
                             experience. Our software and API are incorporated with ERPs, marketplaces, e-commerce
-                            platforms, and custom solutions on both desktop and mobile.
+                            platforms, and custom solutions on both desktop and mobile. Our Courier Company in Dubai
+                            ensures seamless integration and enhanced operational efficiency for your logistics needs.
                         </p>
                     </div>
                 </div>
@@ -458,7 +468,8 @@
                             dispatch team. By working closely with you, we ensure seamless delivery operations. The
                             people who work as dispatchers with us are problem-solving experts. The whole team is always
                             ready to help you and answer your queries and doubts instantly through the available
-                            communication channels you use.
+                            communication channels you use. Our Courier Company in Dubai guarantees responsive support
+                            and efficient delivery solutions.
                         </p>
                     </div>
                 </div>
@@ -540,9 +551,9 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Courier Company in Dubai </p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -605,7 +616,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
