--- a/cross-trade.html
+++ b/cross-trade.html
@@ -103,7 +103,8 @@ Road Freight Services in Dubai " />
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -264,12 +265,12 @@ Road Freight Services in Dubai " />
                 </div>
                 <div class="service_sub_sec1_para">
                     <p>
-                        The global reach of the world requires MNCs to transport their goods between many of their
-                        operational bases. Be it finished products or raw materials, we map distances between one corner
-                        of the world to the other. Our cross-trade services allow you to get assured with the
-                        transportation of your goods from one location to the other. Being an expert in providing
-                        international shipping service, we understand the complexity of cross trade transportation and
-                        hence offer exclusive support to our customers.
+                        The global reach of the world requires MNCs to transport goods between many operational bases.
+                        Be it finished products or raw materials, we map distances across the globe. Our cross-trade
+                        services assure the transportation of goods from one location to another. As a leading Cross
+                        Trade Service Company in Dubai, we understand the complexity of cross-trade transportation and
+                        offer exclusive support to our customers. As experts in international shipping, we ensure
+                        seamless coordination and reliable handling of your consignments.
                     </p>
                     <p>
                         Be it air, sea or road, we handle all the aspects of cross trade service efficiently and
@@ -351,8 +352,8 @@ Road Freight Services in Dubai " />
                     <div class="service_sub_sec3_card_path">
                         <h3>Adaptable Services</h3>
                         <p>
-                            Our extensive cross-trade services are flexible and open-ended for any upcoming challenge/
-                            requirement placed by our clients.
+                            Our Cross Trade Service Company in Dubai offers extensive cross-trade services that are
+                            flexible and open-ended, meeting any challenge or requirement placed by our clients.
                         </p>
                     </div>
                 </div>
@@ -362,8 +363,9 @@ Road Freight Services in Dubai " />
                     <div class="service_sub_sec3_card_path">
                         <h3>Specialized Experts</h3>
                         <p>
-                            We have a team of cross trade professionals who will guide your freight, complying with the
-                            legal and lawful regulations of the destination country.
+                            We have a team of cross trade professionals in our Cross Trade Service Company in Dubai who
+                            will guide your freight, ensuring compliance with legal regulations of the destination
+                            country.
                         </p>
                     </div>
                 </div>
@@ -373,8 +375,8 @@ Road Freight Services in Dubai " />
                     <div class="service_sub_sec3_card_path">
                         <h3>Global Reach</h3>
                         <p>
-                            Our cross trade reach expands far and wide across the globe to give our clients an easy
-                            import and export facility.
+                            Our Cross Trade Service Company in Dubai expands its reach far and wide across the globe,
+                            offering our clients easy import and export facilities.
                         </p>
                     </div>
                 </div>
@@ -387,8 +389,8 @@ Road Freight Services in Dubai " />
                     <div class="service_sub_sec3_card_path">
                         <h3>Temperature Controlled Freight</h3>
                         <p>
-                            With the increased duration and distance of the freight, we provide temperature-controlled
-                            or perishable shipment options.
+                            As a Cross Trade Service Company in Dubai, we offer temperature-controlled or perishable
+                            shipment options to accommodate increased freight durations and distances.
                         </p>
                     </div>
                 </div>
@@ -464,9 +466,10 @@ Road Freight Services in Dubai " />
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Cross Trade
+                        Service Company in Dubai</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -529,7 +532,8 @@ Road Freight Services in Dubai " />
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
