--- a/customs-clearance.html
+++ b/customs-clearance.html
@@ -103,7 +103,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -267,10 +268,10 @@
                         processes such as custom clearance services, documentation and authority procedures. We are
                         profound freight forwarding company in Dubai and hence ensure a smooth and comfortable customs
                         clearance for our clients by easing the regulations and paperwork for import and export quickly
-                        for their shipments. We help clear and handle all the trade compliance and procedures, shipments
-                        by sea, land and air more efficiently.
-                        By providing our valuable customers with the right solutions at the right time, INC Express has
-                        become a trustworthy company offering world-class custom clearing services from Dubai.
+                        for their shipments. We assist in streamlining and managing all trade compliance and processes,
+                        as well as more effectively handling shipments by air, sea, and land. By providing our valuable
+                        customers with the right solutions at the right time, INC Express has become a trustworthy
+                        company offering world-class Customs Clearance Services in Dubai.
                     </p>
                 </div>
             </div>
@@ -290,7 +291,7 @@
                     <h3>Complete documentation</h3>
                     <p>
                         We provide for all the customs clearance documentation and hassle-free paperwork for our
-                        clients.
+                        clients, as a dedicated Customs Clearance Agent UAE.
                     </p>
                 </div>
             </div>
@@ -347,7 +348,7 @@
                         <h3>Freight Pick-up</h3>
                         <p>
                             We provide collect the cargo from your stated location and carefully transfer it to the
-                            location and mode of shipment.
+                            location and mode of shipment, in addition to Customs Clearance Services in Dubai.
                         </p>
                     </div>
                 </div>
@@ -357,8 +358,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Proper Documentation</h3>
                         <p>
-                            Our team cross-checks on all custom clearance documents that might cause delay or restrict
-                            your cargo from being shipped.
+                            Our team cross-checks all custom clearance documents that might cause delay or restrict your
+                            cargo from being shipped, ensuring smooth Customs Clearance Services in Dubai.
                         </p>
                     </div>
                 </div>
@@ -369,7 +370,7 @@
                         <h3>Transparency</h3>
                         <p>
                             We have a transparency policy, under which we will make you aware and notified of further
-                            steps and cargo location.
+                            steps and cargo location, as part of our Customs Clearance Services in Dubai.
                         </p>
                     </div>
                 </div>
@@ -394,7 +395,7 @@
                         <h3>Fast & Safe</h3>
                         <p>
                             We ensure smooth, quick, and safe ways of getting your freight through the custom clearance
-                            guidelines and regulations.
+                            guidelines and regulations, exclusively as part of our Customs Clearance Services in Dubai.
 
                         </p>
                     </div>
@@ -459,9 +460,9 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Customs Clearance Agent UAE.</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -524,7 +525,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
