--- a/dangerous-goods.html
+++ b/dangerous-goods.html
@@ -104,7 +104,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -274,6 +275,7 @@
                         dangerous materials. These goods can include a wide range of items, including lithium batteries,
                         battery-operated devices, aerosols, oxygen cylinders, and flammable materials. Further, we will
                         discuss the specific regulations and details regarding the shipping of hazardous goods.
+                        Dangerous Goods Shipping and Handling Services in Dubai
                     </p>
                 </div>
             </div>
@@ -291,13 +293,11 @@
         <p>
             Dangerous goods are substances or items that are a threat to safety, health, the environment, or property
             during shipping. It is essential to manage such goods with extreme care from the beginning to the end of the
-            shipping process.
-            These goods can come in various forms, such as solids, liquids, or gases, and may include corrosive
-            materials or everyday items like perfumes. Tank containers are commonly used for transporting dangerous
-            goods, as they offer both safety during transportation and the ability to transport large quantities by
-            loading them.
-            It is necessary to select the Hazardous/Dangerous goods shipping services Dubai with all the necessary
-            arrangements.
+            shipping process. These goods can come in various forms, such as solids, liquids, or gases, and may include
+            corrosive materials or everyday items like perfumes. Tank containers are commonly used for transporting
+            dangerous goods, as they offer both safety during transportation and the ability to transport large
+            quantities by loading them. It is necessary to select the Hazardous/Dangerous Goods Shipping and Handling
+            Services in Dubai with all the necessary arrangements.
         </p>
         <h3>Guide To Ship The Hazardous Goods Safely:</h3>
         <p>
@@ -407,7 +407,7 @@
                         <p>
                             The MSDS (material safety data sheet) includes information regarding the potential dangers
                             present and provides instructions to handle the hazardous material safely during
-                            transportation.
+                            transportation. Dangerous Goods Shipping and Handling Services in Dubai
                         </p>
                     </div>
                 </div>
@@ -432,7 +432,8 @@
                         <p>
                             A declaration for dangerous goods (DGD) provides information about the type of hazardous
                             substances which is under transportation. Additionally, it has identification symbols that
-                            describe the specific packaging measures and identify the necessary labels.
+                            describe the specific packaging measures and identify the necessary labels. Dangerous Goods
+                            Shipping and Handling Services in Dubai.
                         </p>
                     </div>
                 </div>
@@ -447,7 +448,8 @@
                             Certification</h3>
                         <p>
                             This document has the container's identification number and confirms that the packaging of
-                            hazardous materials is according to the provided instructions.
+                            hazardous materials is according to the provided instructions. Dangerous Goods Shipping and
+                            Handling Services in Dubai.
                         </p>
                     </div>
                 </div>
@@ -473,11 +475,11 @@
     <section class="service_sub_paragaphs animate fadeInUp">
         <h3>Conclusion</h3>
         <p>
-            There are several factors to keep in mind when shipping dangerous goods and selecting hazardous/dangerous
-            goods shipping services Dubai. By conducting proper research, using secure packaging, completing
-            documentation accurately, and applying the correct labels, you can minimize any issues or delays when
-            transporting shipments that contain hazardous substances. Connect to INC Express Shipping LLC, which follows
-            all the rules and regulations to transport such goods safely and securely.
+            There are several factors to keep in mind when shipping dangerous goods and selecting hazardous/Dangerous
+            Goods Shipping and Handling Services in Dubai. By conducting proper research, using secure packaging,
+            completing documentation accurately, and applying the correct labels, you can minimize any issues or delays
+            when transporting shipments that contain hazardous substances. Connect to INC Express Shipping LLC, which
+            follows all the rules and regulations to transport such goods safely and securely.
         </p>
 
     </section>
@@ -538,9 +540,12 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>
+                        INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Dangerous Goods
+                        Shipping and Handling Services in Dubai
+                    </p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -603,7 +608,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
