--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-5 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -255,10 +256,11 @@
                 <h2>About Us</h2>
                 <h3>INC Express Shipping LLC - Your Bridgeway With The World</h3>
                 <p>At INC Express, we mobilise your cargo and give a boost to your business with accuracy and speed.
-                    Being one of the reliable logistics, transport and warehousing company in UAE, we assure our clients
-                    with exquisite personalised services to enhance their satisfaction. Our quality-oriented logistics
-                    services, make sure that your consignment stays and reaches safely to you. With a magnificent global
-                    stretch, we cater to your transportation with utmost precision. </p>
+                    Being one of the reliable logistics, transport, and warehousing companies in UAE, we assure our
+                    clients with exquisite personalized services to enhance their satisfaction. Our quality-oriented
+                    logistics services ensure that your consignment stays safe and reaches you securely. With a
+                    magnificent global reach, we cater to your transportation needs with utmost precision. INC Express:
+                    Your Best Logistics and Shipping Company in Dubai, UAE. </p>
             </div>
         </div>
         <div class="about_sticker">
@@ -276,8 +278,7 @@
             <div class="about_sticker_text_item col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <h4>Reliability</h4>
                 <p>
-                    At INC Express Shipping LLC, our services comprise astounding work of responsibility and hence our
-                    clients stay relied on our exclusive services.
+                    INC Express Shipping LLC, the Best Logistics and Shipping Company in Dubai, UAE, offers outstandingly responsible services, ensuring clients rely on our exclusive offerings with complete confidence and satisfaction.
                 </p>
             </div>
             <div class="about_sticker_text_item col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -487,9 +488,9 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC is one of the dedicated logistics, warehousing, and Best Logistics and Shipping Company in Dubai, UAE.</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -552,7 +553,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
