--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -227,13 +227,14 @@
                     <p>
                         At INC Express, we mobilize your cargo and give a boost to your business with accuracy and
                         speed.
+
                     </p>
                     <p>
                         Being one of the most reliable logistics, transport, and warehousing companies in the UAE, we
                         assure our clients with exquisite personalized services to enhance their satisfaction. Our
                         quality-oriented logistics services make sure that your consignment stays with us and reaches
                         you safely. With a magnificent global stretch, we cater to your transportation with the utmost
-                        precision.
+                        precision. International Cargo Services Dubai, UAE
                     </p>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 sec3_col2">
@@ -271,7 +272,7 @@
                     <p>
                         Our team offers comprehensive cargo services, including air, sea, and land transportation,
                         ensuring timely and secure delivery of goods through warehousing, customs clearance, and
-                        real-time tracking.
+                        real-time tracking. International Cargo Services Dubai, UAE
                     </p>
                 </div>
             </div>
@@ -438,7 +439,7 @@
                         tracking technology, you can monitor your shipments in real-time, no matter where they are
                         headed. Our 24/7 dedicated customer support team is always ready to assist you, making sure your
                         experience with us is seamless and worry-free. Choose INC Cargo for unparalleled service and
-                        peace of mind.
+                        peace of mind. International Cargo Services Dubai, UAE
                     </p>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-0 col-sm-0 col-0 sec5_txt2">
@@ -454,9 +455,8 @@
                     <img class="sec5_txt2_img1" src="img/timeline p2.webp" alt="">
                     <h3>Unmatched Quality</h3>
                     <p>
-                        Being one of the best shipping company in UAE, our warehousing and logistics services tend
-                        to
-                        provide for unparalleled freight solutions.
+                        Being one of the best International Cargo Services Dubai, UAE, our warehousing and logistics
+                        services tend to provide for unparalleled freight solutions.
                     </p>
                 </div>
             </div>
@@ -505,8 +505,8 @@
                     <img class="sec5_txt2_img1" src="img/timeline p2.webp" alt="">
                     <h3>A to Z Services</h3>
                     <p>
-                        With our end-to-end services as a shipping company in Dubai, we try to provide our clients with
-                        all-inclusive and thorough logistics, warehousing, and shipping support.
+                        With our end-to-end services as International Cargo Services Dubai, UAE, we try to provide our
+                        clients with all-inclusive and thorough logistics, warehousing, and shipping support.
                     </p>
                 </div>
             </div>
@@ -557,7 +557,7 @@
             <div class="col-xl-5 col-lg-5 col-md-5 col-sm-0 col-0 sec7_col1"></div>
             <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12 sec7_col2" id="contact_form">
                 <h2>Contact Us</h2>
-                <form action="ad_form.php" method="post" >
+                <form action="ad_form.php" method="post">
                     <div class="sec7_input_container">
                         <input required id="fname" name="fname" type="text" placeholder="Your Name">
                         <input required id="cname" name="cname" type="text" placeholder="Name of your Company">
@@ -604,8 +604,8 @@
             <div class="row">
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12 footer_col1">
                     <p>
-                        INC Express Shipping LLC excels its name as the best freight forwarding company in Dubai, with
-                        an extensive approach in more than 20 countries
+                        INC Express Shipping LLC excels its name as the best International Cargo Services Dubai, UAE,
+                        with an extensive approach in more than 20 countries
                     </p>
                     <img src="img/inc_nav_logo.webp" alt="">
                 </div>
