--- a/pharma-shipment-handling.html
+++ b/pharma-shipment-handling.html
@@ -101,7 +101,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -250,7 +251,8 @@
                         <h6>Process Of Pharmaceutical Shipping</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/drugs.gif" alt="Essential Rules And Regulations For Pharmaceutical Shipping Dubai">
+                        <img src="img/drugs.gif"
+                            alt="Essential Rules And Regulations For Pharmaceutical Shipping Dubai">
                         <div class="about_stripline"></div>
                         <h6>Essential Rules And Regulations For Pharmaceutical Shipping</h6>
                     </div>
@@ -268,7 +270,7 @@
                         important to have a complete understanding of the rules for pharmaceutical shipping service
                         Dubai and to comply with them consistently. Most pharmaceutical shipments require careful
                         management of the cold chain, as temperature control is crucial for these products. Let us
-                        discuss more about the details of pharmaceutical shipping.
+                        discuss more about the details of Pharmaceutical Shipping Service Dubai.
                     </p>
                 </div>
             </div>
@@ -287,11 +289,12 @@
             Pharmaceutical products are commonly transported in refrigerated containers known as offshore reefers. These
             reefers are regularly examined to ensure they are in suitable condition to keep the medicinal inventory at
             the appropriate temperatures.
+
         </p>
         <p>
             The transportation takes place with an agreement with strict regulations, which is important in
-            pharmaceutical logistics. It is to ensure the safe delivery of drugs and vaccines without them spoiling or
-            losing their efficiency.
+            Pharmaceutical Shipping Service Dubai. It is to ensure the safe delivery of drugs and vaccines without them
+            spoiling or losing their efficiency.
         </p>
         <p>
             However, managing the pharmaceutical supply chain is extremely challenging as transporters must observe cold
@@ -302,14 +305,14 @@
 
         <h3>Essential Rules And Regulations For Pharmaceutical Shipping</h3>
         <p>
-            To ensure agreement with pharma shipment handling in Dubai, it is essential to meet the requirements of both
-            manufacturers and the FDA. For pharma transportation, there are strict requirements to follow the FDA's Code
-            of Federal Regulations.
-            This code provides thorough instructions on the proper handling, temperature control, and documentation of
-            pharmaceutical products. Its role is to maintain high-quality and safe standards for all drugs and vaccines.
-            Additionally, the World Health Organization has established standardized international guidelines for
-            packing and shipping pharmaceutical products, including vaccines. These procedures cover various aspects,
-            such as insulated packing requirements and the submission of vaccine arrival reports.
+            To ensure agreement with Pharmaceutical Shipping Service Dubai, it is essential to meet the requirements of
+            both manufacturers and the FDA. For pharma transportation, there are strict requirements to follow the FDA's
+            Code of Federal Regulations. This code provides thorough instructions on the proper handling, temperature
+            control, and documentation of pharmaceutical products. Its role is to maintain high-quality and safe
+            standards for all drugs and vaccines. Additionally, the World Health Organization has established
+            standardized international guidelines for packing and shipping pharmaceutical products, including vaccines.
+            These procedures cover various aspects, such as insulated packing requirements and the submission of vaccine
+            arrival reports.
         </p>
 
         <h3>Protection Guidelines To Manage Pharma Shipping</h3>
@@ -317,8 +320,8 @@
             The FDA and WHO have established regulations and guidelines to ensure the safe handling of pharmaceutical
             products during transportation. It is important to follow these rules and take necessary precautions to
             protect the products and minimize the risk of damage. By integrating cold chain pharma logistics and
-            optimizing the supply chain, protect the products and decrease the likelihood of any harm occurring during
-            transit. Here are some tips:
+            optimizing the supply chain, Pharmaceutical Shipping Service Dubai can protect the products and decrease the
+            likelihood of any harm occurring during transit. Here are some tips:
         </p>
     </section>
 
@@ -494,9 +497,10 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Pharmaceutical
+                        Shipping Service Dubai </p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -559,7 +563,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
