--- a/project-cargo.html
+++ b/project-cargo.html
@@ -103,7 +103,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -264,11 +265,11 @@
                 </div>
                 <div class="service_sub_sec1_para">
                     <p>
-                        At INC Express, we offer our customers with exceptional logistics services for their project
-                        cargo requirements. We reduce the distances between their raw materials and equipment/plants. No
-                        matter you require international shipping services for your overweight cargo or are willing to
-                        transport heavy machinery, INC Express is at your step with exclusive operational as well as
-                        technical skills, bulk/packaged goods handling, heavy lifting services and more.
+                        At INC Express, we specialize in Project Cargo Logistics Dubai, offering exceptional logistics
+                        services for your project cargo needs. We minimize distances between your raw materials and
+                        equipment/plants, whether you need international shipping for overweight cargo or transportation
+                        of heavy machinery. INC Express provides exclusive operational and technical expertise, handling
+                        bulk/packaged goods and offering heavy lifting services and more.
                     </p>
                     <p>
                         Our top-notch services have a profound experience in providing project cargo services. Being a
@@ -301,8 +302,8 @@
                 <div class="service_sub_sec2_card2">
                     <h3>Client's Participation</h3>
                     <p>
-                        We coordinate our project cargo service with the site of delivery and the client to avoid any
-                        confusion or hassle in the process.
+                        At INC Express, our Project Cargo Logistics Dubai service ensures seamless coordination with
+                        delivery sites and clients, guaranteeing a hassle-free logistics experience.
                     </p>
                 </div>
             </div>
@@ -319,8 +320,9 @@
                 <div class="service_sub_sec2_card2">
                     <h3>Real-time Status</h3>
                     <p>
-                        We make sure that our client's stay calm and assured of their shipment and hence we provide them
-                        with real-time updates on the status of their shipment.
+                        At INC Express, our Project Cargo Logistics Dubai service ensures clients remain calm by
+                        providing real-time updates on their shipment status, ensuring peace of mind throughout the
+                        process.
                     </p>
                 </div>
             </div>
@@ -350,8 +352,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Customized Route</h3>
                         <p>
-                            We create dedicated routes for our clients, which are safe and uniform, to promote easier
-                            importing and exporting of your cargo.
+                            At INC Express, our Project Cargo Logistics Dubai service creates dedicated, safe, and
+                            uniform routes for easier importing and exporting of your cargo.
                         </p>
                     </div>
                 </div>
@@ -361,8 +363,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Safe Warehousing</h3>
                         <p>
-                            Our transportation facilities have foolproof of any and all sorts of extremities that might
-                            damage the freight in any way.
+                            At INC Express, our Project Cargo Logistics Dubai service ensures transportation facilities
+                            are foolproof against all extremes that could damage freight in any way.
                         </p>
                     </div>
                 </div>
@@ -372,8 +374,9 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Maintained Schedules</h3>
                         <p>
-                            Our technical and shipment teams have exceptional time management skills; they will state
-                            and follow strict schedules for freight transportation.
+                            At INC Express, our Project Cargo Logistics Dubai service features technical and shipment
+                            teams with exceptional time management skills. They adhere strictly to schedules for freight
+                            transportation.
                         </p>
                     </div>
                 </div>
@@ -387,8 +390,9 @@
                         <h3>Easy Transportation
                             of Cargo</h3>
                         <p>
-                            We select the cargo containers and transportation modes that fir your requirements
-                            perfectly.
+                            In our Project Cargo Logistics Dubai service, we meticulously select cargo containers and
+                            transportation modes that perfectly fit your requirements.
+
                         </p>
                     </div>
                 </div>
@@ -398,8 +402,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Intermodal Shipment:</h3>
                         <p>
-                            Our wide access to different transportation means, makes available the intermodal shipment
-                            feature for our clients.
+                            In our Project Cargo Logistics Dubai service, our wide access to various transportation
+                            modes enables intermodal shipment options for our clients.
                         </p>
                     </div>
                 </div>
@@ -463,9 +467,10 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Project Cargo
+                        Logistics Dubai</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -528,7 +533,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
