--- a/road-freight.html
+++ b/road-freight.html
@@ -101,7 +101,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -262,11 +263,13 @@
                 </div>
                 <div class="service_sub_sec1_para">
                     <p>
-                        Along with sea freight and air transport of goods and equipment, INC Express is also a road
-                        transport company in Dubai. We assist our clients in all stages of logistics and operation of
-                        projects, right from planning, loading, transportation and unloading. We can customize the road
-                        freight solutions for you and ensure that your goods are transported on time without any delays
-                        and as economical as possible.
+                        Along with sea freight and air transport of goods and equipment, INC Express is also a Road
+                        Freight Forwarding Services in Dubai . We help our clients with project management and logistics
+                        at every level, including planning, loading, transporting, and unloading. We can customize the
+                        road freight solutions for you and ensure that your goods are transported on time without any
+                        delays and as economical as possible.
+
+
                     </p>
                     <p>
                         We support your business with extensive land transportation and logistics options, in the most
@@ -290,8 +293,8 @@
                 <div class="service_sub_sec2_card1">
                     <h3>Excellent Road Network</h3>
                     <p>
-                        We select the best routes for timely delivery and safe handling of your goods and equipment with
-                        zero damage.
+                        We ensure timely delivery and safe handling of goods with zero damage, offering reliable Road
+                        Freight Forwarding Services in Dubai.
                     </p>
                 </div>
             </div>
@@ -346,8 +349,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Shipment Tracking</h3>
                         <p>
-                            Our road transport services also include quick and accurate tracking of your cargo and
-                            expected delivery.
+                            Our Road Freight Forwarding Services in Dubai also include quick and accurate tracking of
+                            your cargo and expected delivery.
 
                         </p>
                     </div>
@@ -358,9 +361,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Best Routes</h3>
                         <p>
-                            With our specialized team support, we select and take the best land transport routes for
-                            your freight in the quickest possible time.
-
+                            Our Road Freight Forwarding Services in Dubai also include quick and accurate tracking of
+                            your cargo and expected delivery.
                         </p>
                     </div>
                 </div>
@@ -370,8 +372,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Personalized Support</h3>
                         <p>
-                            Being one of the top transport company in Dubai, we aim at providing our clients
-                            individualized attention to the client for easier processing.
+                            Being one of the top Road Freight Forwarding Services in Dubai, we aim to provide our
+                            clients individualized attention to the client for easier processing.
                         </p>
                     </div>
                 </div>
@@ -384,8 +386,9 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Consistent Functioning</h3>
                         <p>
-                            Our land transport service, in UAE, maintains the service quality throughout the
-                            transportation period or agreement tenure.
+                            Our land transport service in the UAE maintains the service quality throughout the
+                            transportation period or agreement tenure. We specialize in Road Freight Forwarding Services
+                            in Dubai..
                         </p>
                     </div>
                 </div>
@@ -461,9 +464,9 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and  Road Freight Forwarding Services in Dubai </p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -526,7 +529,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
