--- a/sea-freight.html
+++ b/sea-freight.html
@@ -102,7 +102,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -350,7 +351,8 @@
                         <h3>Safety</h3>
                         <p>
                             We entrust our clients with assurance as both our LCL shipment service and FCL shipment
-                            service are profound and offer secured transition of your consignment.
+                            service are profound and offer secured transition of your consignment. This makes us a
+                            reliable Sea Freight Forwarding Company in Dubai.
                         </p>
                     </div>
                 </div>
@@ -360,8 +362,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Flexible</h3>
                         <p>
-                            We provide convenient pickup form desired location and well-timed delivery at the
-                            destination with our international air freight services.
+                            We offer convenient pickup and timely delivery with our international air freight services,
+                            establishing us as a trusted Sea Freight Forwarding Company in Dubai.
                         </p>
                     </div>
                 </div>
@@ -371,8 +373,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Affordable</h3>
                         <p>
-                            We are one of the most affordable FCL shipment service and LCL shipment service in Dubai and
-                            certainly provides value to our services.
+                            We are one of the most affordable FCL shipment service and LCL shipment service in Dubai,
+                            providing exceptional value with our Sea Freight Forwarding Company in Dubai.
                         </p>
                     </div>
                 </div>
@@ -385,8 +387,8 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Global Coverage</h3>
                         <p>
-                            We cover an extensive range of countries in different parts of the world that make us one of
-                            the most desirable sea cargo shipping companies.
+                            We cover an extensive range of countries in different parts of the world, making us one of
+                            the most desirable Sea Freight Forwarding Companies in Dubai.
                         </p>
                     </div>
                 </div>
@@ -461,9 +463,10 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Sea Freight
+                        Forwarding Company in Dubai </p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -526,7 +529,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
