--- a/temprature-controlled-cargo.html
+++ b/temprature-controlled-cargo.html
@@ -102,7 +102,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -268,12 +269,14 @@
                         bear any losses or disadvantage of dealing in perishable or sensitive goods and hence we offer
                         exclusive temperature-controlled cargo services. No matter you deal with medical equipment's or
                         dangerous goods like chemical substances, we have something for all.
+
                     </p>
                     <p>
-                        We are the leading temperature control freight forwarding company in Dubai that provides
-                        modernised equipment on all the stages of the process. We have specialised warehousing and
-                        refrigerators that provide require the temperature to your products. We do not support any
-                        chemical additions, and hence we assure our clients with the quality of their goods.
+                        We are the leading Temperature Control Cargo Service Dubai that provides modernised equipment on
+                        all the stages of the process. We have specialised warehousing and refrigerators that provide
+                        require the temperature to your products. We do not support any chemical additions, and hence we
+                        assure our clients with the quality of their goods.
+
                     </p>
                 </div>
             </div>
@@ -353,7 +356,9 @@
                         <h3>Service for All</h3>
                         <p>
                             Our varied temperature control cargo shipment covers services for different sectors ranging
-                            from healthcare to food and edible product.
+                            from healthcare to food and edible products, specifically as part of our Temperature Control
+                            Cargo Service Dubai.
+
                         </p>
                     </div>
                 </div>
@@ -364,7 +369,8 @@
                         <h3>Express Transportation</h3>
                         <p>
                             Rather than opting for slower and irregular logistic services, choose our Express
-                            Transportation solution for your perishable and putrescible goods.
+                            Transportation solution for your perishable and putrescible goods, specifically through our
+                            Temperature Control Cargo Service Dubai.
                         </p>
                     </div>
                 </div>
@@ -375,7 +381,9 @@
                         <h3>Reliable Service</h3>
                         <p>
                             With our expertise, reach, and knowledge; you can rest assured that your freight and its
-                            transportation are in good hands.
+                            transportation are in good hands, exclusively through our Temperature Control Cargo Service
+                            Dubai.
+
                         </p>
                     </div>
                 </div>
@@ -389,7 +397,8 @@
                         <h3>Freight Monitoring</h3>
                         <p>
                             We have cargo monitoring systems equipped with the containers to make sure that all products
-                            and goods are safe and sound.
+                            and goods are safe and sound, specifically as part of our Temperature Control Cargo Service
+                            Dubai.
                         </p>
                     </div>
                 </div>
@@ -464,9 +473,10 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and Temperature
+                        Control Cargo Service Dubai</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -529,7 +539,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
