--- a/warehousing.html
+++ b/warehousing.html
@@ -35,34 +35,38 @@
 
 
     <!-- Primary Meta Tags -->
-  <title>Warehousing Company in Dubai, UAE | Storage Service Provider </title>
-  <meta name="description" content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
-  <meta name="keywords" content="Warehousing in UAE, Top Warehouse Company in Dubai, Warehouse Storage Services in Dubai, Warehousing and Logistics Companies in Dubai, Storage Service Provider in Dubai, Storage Space and Warehouse Facility Dubai, Warehouse Storage in Dubai, Shipping and Logistics Company in Dubai, Corporate Courier Service in Dubai, Warehousing and Distribution Service, Supply Chain Management Dubai "/>
-  <meta name="language" content="english" />
-  <meta name="content-language" content="english" />
-  <meta name="rating" content="General" />
-  <meta name="robots" content="follow,index" />
-  <link rel="canonical" href="https://incshipping.com/warehousing" />
-  <meta name="DC.title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
-  <meta name="geo.region" content="AE" />
-  <meta name="geo.placename" content="Atmar" />
-  <meta name="geo.position" content="25.3;55.4" />
-  <meta name="ICBM" content="25.3, 55.4" />
+    <title>Warehousing Company in Dubai, UAE | Storage Service Provider </title>
+    <meta name="description"
+        content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
+    <meta name="keywords"
+        content="Warehousing in UAE, Top Warehouse Company in Dubai, Warehouse Storage Services in Dubai, Warehousing and Logistics Companies in Dubai, Storage Service Provider in Dubai, Storage Space and Warehouse Facility Dubai, Warehouse Storage in Dubai, Shipping and Logistics Company in Dubai, Corporate Courier Service in Dubai, Warehousing and Distribution Service, Supply Chain Management Dubai " />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/warehousing" />
+    <meta name="DC.title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" >
-<meta property="og:site_name" content="INC Express Shipping L.L.C">
-<meta property="og:url" content=https://incshipping.com/warehousing>
-<meta property="og:description" content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." >
-<meta property="og:type" content="website">
-<meta property="og:image" content="">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider">
+    <meta property="og:site_name" content="INC Express Shipping L.L.C">
+    <meta property="og:url" content=https://incshipping.com/warehousing>
+    <meta property="og:description"
+        content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://incshipping.com/warehousing" />
-<meta property="twitter:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
-<meta property="twitter:description" content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
-<meta property="twitter:image" content="" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/warehousing" />
+    <meta property="twitter:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
+    <meta property="twitter:description"
+        content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
+    <meta property="twitter:image" content="" />
 
 
 
@@ -260,13 +264,11 @@
                 <div class="service_sub_sec1_para">
                     <p>
                         INC Express offers its clients warehousing solutions including fully integrated systems, staff,
-                        local transportation, inventory management and more. As a leading storage warehouse company in
-                        Dubai, we allow our clients to gain effortless access to process orders and distribute products
-                        quickly and cost-effectively through the mediums that we offer. It also becomes essential for
-                        the customer to pick the most economical storage and warehousing services. The storage units
-                        provided by us are multi-functional and fully secured.
-                        <br> We aim to provide our valued partners with the best storage and warehousing solutions which
-                        are rich in expertise and cost-effective.
+                        local transportation, inventory management and more. As a leading Storage Service Provider and
+                        Warehousing Company in Dubai, UAE, we allow our clients to gain effortless access to process
+                        orders and distribute products quickly and cost-effectively through the mediums that we offer.
+                        It also becomes essential for the customer to pick the most economical storage and warehousing
+                        services. The storage units provided by us are multi-functional and fully secured.
                     </p>
                 </div>
             </div>
@@ -344,7 +346,8 @@
                         <h3>Advanced Facility</h3>
                         <p>
                             The INC Express Warehouses are equipped with hi-tech machines and components for assisting
-                            the team in supervising.
+                            the team in supervising, specifically as a Warehousing Company in Dubai, UAE.
+
                         </p>
                     </div>
                 </div>
@@ -354,8 +357,10 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Skilled Team</h3>
                         <p>
-                            Our Warehouse Management team is proficient in their functioning and provide the best
-                            warehouse organization services and procedures.
+                            Our Warehouse Management team is proficient in their functioning and provides the best
+                            warehouse organization services and procedures, exclusively as a Warehousing Company in
+                            Dubai, UAE.
+
                         </p>
                     </div>
                 </div>
@@ -365,8 +370,9 @@
                     <div class="service_sub_sec3_card_path">
                         <h3>Efficient Inventory Management</h3>
                         <p>
-                            We keep a detailed and structured record of all goods and cargo that enters/ exits the
-                            warehouse facility for future references.
+                            We keep a detailed and structured record of all goods and cargo that enters/exits the
+                            warehouse facility for future references, specifically as a Warehousing Company in Dubai,
+                            UAE.
                         </p>
                     </div>
                 </div>
@@ -455,9 +461,10 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
-                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
-                        in Dubai</p>
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
+                    <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing, Storage Service
+                        Provider and Warehousing Company in Dubai, UAE</p>
                 </div>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
@@ -520,7 +527,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
